log
Thu Apr 30 05:54:07 PM UTC 2026: 
 tests:  1|8
total_score: 0/60
b389e7d
Thu Apr 30 06:02:34 PM UTC 2026: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/60
eb83c53
Thu Apr 30 06:03:13 PM UTC 2026: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/60
9ef2715
Thu Apr 30 06:17:25 PM UTC 2026: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:63:20: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   63 |     int llaveOri = (int *) key;
      |                    ^
treemap.c:66:24: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   66 |         int llaveAux = (int *) auxiliar->pair->key;
      |                        ^
9018af8
Thu Apr 30 06:18:43 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:66:24: error: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   66 |         int llaveAux = (int *) auxiliar->pair->key;
      |                        ^
treemap.c:68:21: error: comparison between pointer and integer [-Werror]
   68 |         if(llaveAux == llaveOri){
      |                     ^~
treemap.c:72:26: error: comparison between pointer and integer [-Werror]
   72 |         else if(llaveAux > llaveOri){
      |                          ^
cc1: all warnings being treated as errors
0fd2f55
Thu Apr 30 06:19:12 PM UTC 2026: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|7
total_score: 5/60
7e0ef54
Thu Apr 30 06:19:53 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
aa64f44
